# imc-prosperity-4

./: .gitignore  README.md  allocation.py  datamodel.py  orderbook.py  pyproject.toml  r4desc.txt  setup.py
ROUND0/: thomas.py
ROUND0_TUTORIAL/: helpers.py
ROUND1/: greedy2.py  greedy3_reupload.py  greedy_3.py  ml_round1_trader.py  pepper_osmium_combo.py
ROUND_0/: andre.py  lime_1.py  lime_2.p  thomas_tomatos.py
ROUND_1/: biggermm2.py  greed2.py  pepper_osmium_outside_box.py  trader.py
ROUND_2/: DONOTTRADE.py  DONOTTRADE_root.py  trader_safe.py
ROUND_3/: claudecarry.py  trader.py  trader_ACCDIRECT.py  trader_ALLMEAN.py  trader_BUGALPHA.py  trader_DELTABEAST.py  trader_DIRACC.py  trader_EXPERIMENTS.py  trader_HWM.py  trader_HYBRIDBEAST.py  trader_IVOVERLAY.py  trader_IVREGIME.py  trader_IVSMILE_STACK.py  trader_LATE.py  trader_MOM.py  trader_MS.py  trader_NO4500FLASH.py  trader_NOHARD.py  trader_NOITMFLASH.py  trader_REVERT.py  trader_SIMPLEALPHA.py  trader_SIMPLEALPHA_SUBMIT.py  trader_SMILE_IV.py  trader_STOP.py  trader_SWINGBEAST.py  trader_TRAILVOL.py  trader_VERTICAL.py  trader_VOL.py  trader_VOLALPHA.py  trader_atm_mm.py  trader_ffFIX.py  trader_final.py  trader_final_2.py  trader_final_OPTIMUM.py  trader_strats.py  trader_ultimate_free_option.py
ROUND_4/: 513881.py  final_round4_tournament_agent.py  trader_AGENT1_BEST.py  trader_AGENT2_WING5200.py  trader_BEARSPR.py  trader_BOTVELVET.py  trader_HYPER.py  trader_IVTHETA.py  trader_PROBE.py  trader_TIGHTEDGE.py  trader_WAITALPHA.py  zc.py
examples/: Trader_example.py  blank.py
notebooks/: data_analysis.ipynb  data_analysis_round_1.ipynb  round1_combo_analysis.ipynb  round1_ml_strategy.ipynb  round1_outside_box_visuals.ipynb  round1_outside_box_visuals.py
puzzles/: badges.html  chessnotcheckers.ipynb  homepage.html  tutorial.html
round_0_tutorial/: helpers.py  lime_2.py
(+228 files in other folders)
